--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "reverse": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "dva-core": "^1.4.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.0",
     "react-navigation-redux-helpers": "^3.0.2",
     "react-navigation-stack": "^1.5.1",
